--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -118,7 +118,7 @@ markdown_extensions:
 extra:
   analytics:
     provider: google
-    property: G-HDTMP5FFHP
+    property: G-DB0YY59TE4
   social_image: https://opengraph.githubassets.com/1671805243.560327/airtai/faststream
   social:
     - icon: fontawesome/brands/discord
