--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -29,5 +29,6 @@ jobs:
                 git config --local user.name "github-actions[bot]"
             - run: echo $VERSION
             # - run: cd docs && mike delete --all
+            - run: cd docs && envsubst '${VERSION}' < templates/index.html.template > templates/index.html
             - run: cd docs && mike deploy --template templates/redirect.html --update-aliases --no-redirect $VERSION
-            - run: cd docs && mike set-default --push --template templates/redirect.html $VERSION
+            - run: cd docs && mike set-default --push --template templates/index.html $VERSION
