--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -30,5 +30,5 @@ jobs:
             - run: echo $VERSION
             # - run: cd docs && mike delete --all
             - run: cd docs && envsubst '${VERSION}' < templates/index.html.template > templates/index.html
-            - run: cd docs && mike deploy --template templates/redirect.html --update-aliases --no-redirect $VERSION latest
+            - run: cd docs && mike deploy --template templates/redirect.html --update-aliases --alias-type=copy $VERSION latest
             - run: cd docs && mike set-default --push --template templates/redirect.html $VERSION
