Comment out and debug

--- a/.github/workflows/check-broken-links-in-docs.yaml
+++ b/.github/workflows/check-broken-links-in-docs.yaml
@@ -10,7 +10,7 @@ jobs:
   check-broken-link:
     name: Check docs for broken links
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v4
         with:
