--- a/.github/workflows/check-broken-links-in-docs.yaml
+++ b/.github/workflows/check-broken-links-in-docs.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Check links using container
         uses: ruzickap/action-my-broken-link-checker@v2
         with:
-          url: https://dummy.faststream.airt.ai
+          # url: https://dummy.faststream.airt.ai
           pages_path: ./docs/site
           cmd_params: '--verbose --buffer-size=8192 --max-connections=10 --color=always'
           debug: true
