--- a/.github/workflows/check-broken-links-in-docs.yaml
+++ b/.github/workflows/check-broken-links-in-docs.yaml
@@ -29,5 +29,5 @@ jobs:
         with:
           url: https://dummy.faststream.airt.ai
           # pages_path: ./docs/site
-          cmd_params: '--verbose --buffer-size=8192 --max-connections=10 --color=always'
+          cmd_params: '--verbose --buffer-size=8192 --max-connections=10 --color=always --exclude="(localhost:8000|linkedin.com)"'
           debug: true
