--- a/.github/workflows/update_release_notes.yaml
+++ b/.github/workflows/update_release_notes.yaml
@@ -6,41 +6,50 @@ on:
       - '*'
 
 jobs:
-  update_release_notes:
+  update-release-notes:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Fetch all history for all tags and branches
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
-          pip install requests typer
+          python -m pip install --upgrade pip
+          # Add any other dependencies required by your script here
 
-      - name: Run update_releases.py
-        run: |
-          python ./docs/update_releases.py
-          git diff --exit-code || git config user.name "GitHub Actions" && git config user.email "<>"
-      
-      - name: Create new branch and commit changes
-        run: |
-          if [ -n "$(git status --porcelain)" ]; then
-            git checkout -b update-release-notes-${{ github.event.ref_name }}
-            git add .
-            git commit -m "Update release notes for ${{ github.event.ref_name }}"
-            git push origin update-release-notes-${{ github.event.ref_name }}
-          fi
+      - name: Run update_releases.py script
+        run: python ./docs/update_releases.py
 
-      - name: Create Merge Request
-        uses: peter-evans/create-pull-request@v3
+      - name: Check for changes
+        id: git-check
+        run: |
+          git diff --quiet || echo "::set-output name=changes_detected::true"
+
+      - name: Create new branch and commit changes if there are any
+        if: steps.git-check.outputs.changes_detected
+        run: |
+          TAG_NAME=${GITHUB_REF#refs/tags/}
+          BRANCH_NAME="update-release-notes-$TAG_NAME"
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+          git checkout -b "$BRANCH_NAME"
+          git add .
+          git commit -m "Update release notes for $TAG_NAME"
+          git push origin "$BRANCH_NAME"
+
+      - name: Create Pull Request
+        if: steps.git-check.outputs.changes_detected
+        uses: repo-sync/pull-request@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: update-release-notes-${{ github.event.ref_name }}
-          commit-message: "Update release notes for ${{ github.event.ref_name }}"
-          title: "Update Release Notes"
-          body: "Automatically generated release notes update for ${{ github.event.ref_name }}"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: "${{ env.BRANCH_NAME }}"
+          title: "Update Release Notes for ${{ env.TAG_NAME }}"
+          body: "This is an automated pull request to update the release notes for ${{ env.TAG_NAME }}"
+          base: "main" # The branch you want to merge into
