--- a/.github/workflows/update_release_notes.yaml
+++ b/.github/workflows/update_release_notes.yaml
@@ -46,10 +46,11 @@ jobs:
 
       - name: Create Pull Request
         if: steps.git-check.outputs.changes_detected
-        uses: repo-sync/pull-request@v3
+        uses: peter-evans/create-pull-request@v5
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           branch: "${{ env.BRANCH_NAME }}"
           title: "Update Release Notes for ${{ env.TAG_NAME }}"
+          commit-message: "Update Release Notes for ${{ env.TAG_NAME }}"
           body: "This is an automated pull request to update the release notes for ${{ env.TAG_NAME }}"
           base: "main" # The branch you want to merge into
