--- a/.github/workflows/update_release_notes.yaml
+++ b/.github/workflows/update_release_notes.yaml
@@ -8,6 +8,9 @@ on:
 jobs:
   update-release-notes:
     runs-on: ubuntu-latest
+    env:
+      TAG_NAME: ${{ github.ref_name }}
+      BRANCH_NAME: update-release-notes-${{ github.ref_name }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -35,8 +38,6 @@ jobs:
       - name: Create new branch and commit changes if there are any
         if: steps.git-check.outputs.changes_detected
         run: |
-          TAG_NAME=${GITHUB_REF#refs/tags/}
-          BRANCH_NAME="update-release-notes-$TAG_NAME"
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
           git checkout -b "$BRANCH_NAME"
@@ -49,7 +50,7 @@ jobs:
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: "${{ env.BRANCH_NAME }}"
+          branch: ${{ env.BRANCH_NAME }}
           title: "Update Release Notes for ${{ env.TAG_NAME }}"
           commit-message: "Update Release Notes for ${{ env.TAG_NAME }}"
           body: "This is an automated pull request to update the release notes for ${{ env.TAG_NAME }}"
