--- a/.github/workflows/update_release_notes.yaml
+++ b/.github/workflows/update_release_notes.yaml
@@ -41,6 +41,7 @@ jobs:
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
           git checkout -b "$BRANCH_NAME"
+          python ./docs/update_releases.py
           git add .
           git commit -m "Update release notes for $TAG_NAME"
           git push origin "$BRANCH_NAME"
