Push to main itself

--- a/.github/workflows/update_release_notes.yaml
+++ b/.github/workflows/update_release_notes.yaml
@@ -16,7 +16,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        # with:
+        with:
+          ref: 'main'
         #   fetch-depth: 0 # Fetch all history for all tags and branches
 
       - name: Set up Python
@@ -43,19 +44,19 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Update release notes for ${{ env.TAG_NAME }}"
-          branch: ${{ env.BRANCH_NAME }}
-          create_branch: true
+          branch: main
+        #   create_branch: true
           file_pattern: docs/docs/en/release.md
           commit_user_name: 'github-actions'
           commit_user_email: 'github-actions@github.com'
 
-      - name: Create Pull Request
-        if: steps.git-check.outputs.changes_detected
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ env.BRANCH_NAME }}
-          title: "Update Release Notes for ${{ env.TAG_NAME }}"
-          commit-message: "Update Release Notes for ${{ env.TAG_NAME }}"
-          body: "This is an automated pull request to update the release notes for ${{ env.TAG_NAME }}"
-          base: "main" # The branch you want to merge into
+    #   - name: Create Pull Request
+    #     if: steps.git-check.outputs.changes_detected
+    #     uses: peter-evans/create-pull-request@v5
+    #     with:
+    #       token: ${{ secrets.GITHUB_TOKEN }}
+    #       branch: ${{ env.BRANCH_NAME }}
+    #       title: "Update Release Notes for ${{ env.TAG_NAME }}"
+    #       commit-message: "Update Release Notes for ${{ env.TAG_NAME }}"
+    #       body: "This is an automated pull request to update the release notes for ${{ env.TAG_NAME }}"
+    #       base: "main" # The branch you want to merge into
