--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -26,10 +26,20 @@ jobs:
       - run: pip install -e ".[dev]"
       - run: ./scripts/build-docs.sh
       - run: echo "VERSION=$(python3 -c 'from importlib.metadata import version; print(".".join(version("faststream").split(".")[:2]))')" >> $GITHUB_ENV
+      - run: echo "IS_RC=$(python3 -c 'from importlib.metadata import version; print("rc" in version("faststream"))')" >> $GITHUB_ENV
       - name: Configure Git user
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
       - run: echo $VERSION
-      - run: cd docs && mike deploy -F mkdocs.yml --update-aliases $VERSION latest
-      - run: cd docs && mike set-default --push --allow-empty -F mkdocs.yml latest
+      - run: echo $IS_RC
+      - run: |
+          if [ "$IS_RC" == "True" ]; then
+            cd docs && mike deploy -F mkdocs.yml --update-aliases $VERSION latest
+            cd docs && mike set-default --push --allow-empty -F mkdocs.yml latest
+          else
+            cd docs && mike deploy -F mkdocs.yml --update-aliases $VERSION
+            cd docs && mike set-default --push --allow-empty -F mkdocs.yml
+          fi
+      # - run: cd docs && mike deploy -F mkdocs.yml --update-aliases $VERSION latest
+      # - run: cd docs && mike set-default --push --allow-empty -F mkdocs.yml latest
