--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -36,8 +36,11 @@ jobs:
       - run: echo $IS_RC
       - run: |
           if [ "$IS_RC" == "True" ]; then
+            echo "start"
             cd docs && mike deploy -F mkdocs.yml --update-aliases $VERSION latest
+            echo "first part done"
             cd docs && mike set-default --push --allow-empty -F mkdocs.yml latest
+            echo "all over"
           else
             cd docs && mike deploy --push -F mkdocs.yml --update-aliases $VERSION
           fi
