--- a/.github/workflows/update_release_notes.yaml
+++ b/.github/workflows/update_release_notes.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+          pip install requests
 
       - name: Run update_releases.py script
         run: python ./docs/update_releases.py
@@ -44,7 +44,19 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Update release notes for ${{ env.TAG_NAME }}"
-          branch: main
+          branch: ${{ env.BRANCH_NAME }}
+          create_branch: true
           file_pattern: docs/docs/en/release.md
           commit_user_name: 'github-actions'
           commit_user_email: 'github-actions@github.com'
+
+      - name: Create Pull Request
+        if: steps.git-check.outputs.changes_detected
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ env.BRANCH_NAME }}
+          title: "Update Release Notes for ${{ env.TAG_NAME }}"
+          commit-message: "Update Release Notes for ${{ env.TAG_NAME }}"
+          body: "This is an automated pull request to update the release notes for ${{ env.TAG_NAME }}"
+          base: "main" # The branch you want to merge into
