--- a/.github/workflows/update_release_notes.yaml
+++ b/.github/workflows/update_release_notes.yaml
@@ -55,13 +55,13 @@ jobs:
       #     commit_user_name: 'github-actions'
       #     commit_user_email: 'github-actions@github.com'
 
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v9
-        with:
-          default_author: github_actions
-          new_branch: ${{ env.BRANCH_NAME }}
-          message: 'Update release notes for ${{ env.TAG_NAME }}'
-          add: '*.md'
+      # - name: Commit changes
+      #   uses: EndBug/add-and-commit@v9
+      #   with:
+      #     default_author: github_actions
+      #     new_branch: ${{ env.BRANCH_NAME }}
+      #     message: 'Update release notes for ${{ env.TAG_NAME }}'
+      #     add: '*.md'
 
       - name: Create Pull Request
         if: steps.git-check.outputs.changes_detected
