--- a/.github/workflows/update_release_notes.yaml
+++ b/.github/workflows/update_release_notes.yaml
@@ -1,9 +1,11 @@
 name: Update Release Notes
 
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types: [published]
+  # push:
+  #   tags:
+  #     - '*'
 
 jobs:
   update-release-notes:
@@ -16,8 +18,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        # with:
-          # fetch-depth: 0
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -48,4 +50,4 @@ jobs:
           title: "Update Release Notes for ${{ env.TAG_NAME }}"
           commit-message: "Update Release Notes for ${{ env.TAG_NAME }}"
           body: "This is an automated pull request to update the release notes for ${{ env.TAG_NAME }}"
-          #base: "main" # The branch you want to merge into
+          base: "main" # The branch you want to merge into
