--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,20 +5,25 @@ repos:
     rev: v4.6.0
     hooks:
     -   id: trailing-whitespace
+        stages: [pre-commit, pre-merge-commit, manual]
     -   id: end-of-file-fixer
+        stages: [pre-commit, pre-merge-commit, manual]
         exclude: |
             (?x)^(
                 docs/docs/SUMMARY.md|
                 docs/docs/en/api/.meta.yml
             )$
     -   id: check-yaml
+        stages: [pre-commit, pre-merge-commit, manual]
         exclude: 'docs/mkdocs.yml'
     -   id: check-added-large-files
+        stages: [pre-commit, pre-merge-commit, manual]
 
 -   repo: https://github.com/codespell-project/codespell
     rev: v2.3.0
     hooks:
     -   id: codespell
+        stages: [pre-commit, pre-merge-commit, manual]
         args: [--ignore-words=.codespell-whitelist.txt]
         exclude: |
             (?x)^(
@@ -29,6 +34,7 @@ repos:
     hooks:
     -   id: lint
         name: Linter
+        stages: [pre-commit, pre-merge-commit, manual]
         entry: "scripts/lint-pre-commit.sh"
         language: python
         language_version: python3.8
